--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "devDependencies": {
     "expose-loader": "4.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "ts-loader": "9.3.1",
     "typescript": "4.8.0-dev.20220730",
     "webpack": "5.74.0",
@@ -12,7 +13,8 @@
     "webpack-dev-server": "4.9.3"
   },
   "dependencies": {
-    "phaser": "3.60.0-beta.9"
+    "phaser": "3.60.0-beta.9",
+    "phaser-animated-tiles": "^2.0.2"
   },
   "scripts": {
     "dev": "webpack serve --mode development"
